--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,10 +12,10 @@ jobs:
         uses: satackey/action-docker-layer-caching@v0.0.8
 
       - name: build image
-        run: docker build -t ${{ secrets.REGISTRY_USERNAME }}/inferno-os:${GITHUB_REF##*/} .
+        run: docker build -t ${{ secrets.REGISTRY_USERNAME }}/mgm-pr-merge:${GITHUB_REF##*/} .
 
       - name: login to hub.docker.com
         run: docker login -u ${{ secrets.REGISTRY_USERNAME }} -p ${{ secrets.REGISTRY_PASSWORD }}
 
       - name: push image to registry
-        run: docker image push ${{ secrets.REGISTRY_USERNAME }}/inferno-os:${GITHUB_REF##*/}
+        run: docker image push ${{ secrets.REGISTRY_USERNAME }}/mgm-pr-merge:${GITHUB_REF##*/}
